fix acr module repo

--- a/action.yml
+++ b/action.yml
@@ -201,7 +201,7 @@ runs:
         shell: bash
         run: |
           # Target the ACR registry, get all tags, and filter to only semantic version tags (X.Y.Z format)
-          LATEST_IMAGE=$ACR_REGISTRY/$ENGINEERING_PREFIX/$MODULE
+          LATEST_IMAGE=$ACR_REGISTRY/$ENGINEERING_PREFIX/$MODULE/$MODULE
           LATEST_TAGS=$(skopeo list-tags --creds $REGISTRY_USERNAME:$REGISTRY_PASWORD docker://$LATEST_IMAGE | jq -r '.Tags[]')
           SEMVER_TAGS=$(echo "$LATEST_TAGS" | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$')
                     
