--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,9 @@ name: 'Extract Version Information'
 description: 'Extracts and normalizes version information from git refs'
 
 inputs:
+  acr:
+    description: 'Azure container registry name'
+    type: string
   module:
     description: 'Module used to query ACR with skopeo to determine latest tag'
     required: true
@@ -201,7 +204,7 @@ runs:
         shell: bash
         run: |
           # Target the ACR registry, get all tags, and filter to only semantic version tags (X.Y.Z format)
-          LATEST_IMAGE=$ACR_REGISTRY/$ENGINEERING_PREFIX/$MODULE/$MODULE
+          LATEST_IMAGE=$ACR/$ENGINEERING_PREFIX/$MODULE/$MODULE
           echo "Latest Image: $LATEST_IMAGE"
           LATEST_TAGS=$(skopeo list-tags --creds $REGISTRY_USERNAME:$REGISTRY_PASWORD docker://$LATEST_IMAGE | jq -r '.Tags[]')
           SEMVER_TAGS=$(echo "$LATEST_TAGS" | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$')
@@ -223,7 +226,7 @@ runs:
           REGISTRY_USERNAME: ${{ inputs.registry_username }}
           REGISTRY_PASWORD: ${{ inputs.registry_password}}
           ENGINEERING_PREFIX: ${{ inputs.engineering_prefix }}
-          ACR_REGISTRY: ${{ env.ACR_REGISTRY }}
+          ACR: ${{ inputs.acr }}
 
       # Step 7: Add 'latest' tag for release versions if they are truly latest
       # Compares current version with existing registry version to determine if this is the newest
