--- a/action.yml
+++ b/action.yml
@@ -218,8 +218,8 @@ runs:
           echo "Latest Image: $LATEST_IMAGE"
           
           # Get all tags from registry, handle case where registry is empty or image doesn't exist yet
-          LATEST_TAGS=$(skopeo list-tags --creds $REGISTRY_USERNAME:$REGISTRY_PASWORD docker://$LATEST_IMAGE 2>/dev/null | jq -r '.Tags[]' || echo "")
-          
+          LATEST_TAGS=$(skopeo list-tags --creds $REGISTRY_USERNAME:$REGISTRY_PASSWORD docker://$LATEST_IMAGE 2>/dev/null | jq -r '.Tags[]' || echo "")
+
           # Filter to only semantic version tags (X.Y.Z format), don't fail if no matches found
           SEMVER_TAGS=$(echo "$LATEST_TAGS" | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' || true)
           
